--- a/tsconfig.rollup.json
+++ b/tsconfig.rollup.json
@@ -1,6 +1,16 @@
 {
     "extends": "./tsconfig.base.json",
     "compilerOptions": {
-        "jsx": "react-jsx"
-    }
+        "target": "esnext",
+        "module": "esnext",
+        "moduleResolution": "node",
+        "jsx": "react-jsx",
+        "declaration": true,
+        "declarationDir": "./dist/types",  // создаст папку с типами
+        "outDir": "./dist",  // выходная папка для скомпилированных файлов
+        "esModuleInterop": true,
+        "skipLibCheck": true
+    },
+    "include": ["src/**/*"],
+    "exclude": ["node_modules"]
 }
