feat: prepare library for GitHub usage
- Added build output in the dist folder using Rollup.
- Updated dependencies for proper build functionality.
- Updated package.json to support installation from GitHub.

--- a/tsconfig.rollup.json
+++ b/tsconfig.rollup.json
@@ -6,8 +6,8 @@
         "moduleResolution": "node",
         "jsx": "react-jsx",
         "declaration": true,
-        "declarationDir": "./dist/types",  // создаст папку с типами
-        "outDir": "./dist",  // выходная папка для скомпилированных файлов
+        "declarationDir": "./dist/types",
+        "outDir": "./dist",
         "esModuleInterop": true,
         "skipLibCheck": true
     },
